fix align CSS style

--- a/foundations/05-descendant-combinator/style.css
+++ b/foundations/05-descendant-combinator/style.css
@@ -2,4 +2,5 @@
     color: red;
     background-color: yellow;
     font-size: 20px;
+    text-align: center;
 }
